--- a/src/app/pages/workGPT/workGPT.page.scss
+++ b/src/app/pages/workGPT/workGPT.page.scss
@@ -66,7 +66,23 @@
   width: 82%;
   //background-color: #0d66c2;
   .chat-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
     height: 70%;
+    ion-item {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      height: 18%;
+      ion-label {
+        text-align: start;
+        position: absolute;
+        left: 20%;
+        right: 20%
+      }
+    }
   }
   .input-area {
     display: flex;
