--- a/src/app/pages/workGPT/workGPT.page.scss
+++ b/src/app/pages/workGPT/workGPT.page.scss
@@ -71,18 +71,24 @@
     align-items: center;
     justify-content: start;
     height: 70%;
-    ion-item {
+    div {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       width: 100%;
       height: 18%;
-      ion-label {
-        text-align: start;
-        position: absolute;
-        left: 20%;
-        right: 20%
+
+      ion-item {
+
+        ion-label {
+          text-align: start;
+          position: absolute;
+          left: 20%;
+          right: 20%
+        }
       }
     }
+
   }
   .input-area {
     display: flex;
